# experiments

./: .gitignore  Cargo.toml  Dockerfile  READING.md  README.md  alias.sh
.devcontainer/: devcontainer.json
atomics-and-locks/: Cargo.toml  README.md
atomics-and-locks/examples/: 01_threads.rs
atomics-and-locks/src/: lib.rs
cor/: Cargo.toml  README.md
cor/src/: cell.rs  channels.rs  iterators.rs  lib.rs  rc.rs  refcell.rs  strsplit.rs  vecmac.rs
fs-wrap/: Cargo.toml
fs-wrap/src/: main.rs
fsfs/: Cargo.toml
libc/: README.md  get-user.c
networking/: .gitignore  Makefile  server  server.c  showip.c  sockaddr_align.c
parquet/: README.md
parquet/docs/: metadata.md  page-index.md  tools.md
parquet/parquet-py/: README.md  pyproject.toml
parquet/parquet-py/src/parquet_py/: __init__.py  encoding.py  exceptions.py  metadata.py
parquet/parquet-py/src/parquet_py/parquet/: ttypes.py
parquet/parquet-py/test-data/: nation.csv  nation.parquet  nation.schema
parquet/parquet-rs/: Cargo.toml  parquet.thrift
parquet/parquet-rs/src/: main.rs
parquet/parquet-rs/src/metadata/: mod.rs
smallvec/: Cargo.toml
smallvec/examples/: api.rs
strsplit/src/: lib.rs
vecmac/src/: lib.rs
